<resources>
    <string name="app_name">Warlords Online</string>
    <string name="app_publisher">G-Level</string>
    <string name="id">id</string>
    <string name="placeholder">placeholder</string>
    <string name="viewholder">placeholder</string>
    <string name="cancel">Cancel</string>
    <string name="coming_soon">Coming soon&#8230;</string>
    <string name="mail_address">guillaume.gouchon@gmail.com</string>
    <string name="contact_title">Question about </string>
    <string name="contact_support_via">Contact support via&#8230;</string>
    <string name="no_mail_client">There are no email clients installed on your device&#8230;</string>
    <string name="rate_dont_want">No, thanks</string>
    <string name="rate_later">Remind me later</string>
    <string name="rate_now">Rate now !</string>
    <string name="rate_title">Rate the app ?</string>
    <string name="rate_message">If you enjoy using %s, please take a moment to rate it.\nThanks for your support !</string>
    <string name="about_title">About Warlords</string>
    <string name="about_credits">Game and music\nby <a href="http://www.linkedin.com/profile/view?id=144913212">Guillaume Gouchon</a>.</string>
    <string name="about_blog">Check out <a href="http://glevelapps.blogspot.co.uk">my Blog</a> !</string>
    <string name="about_contact"><a href="mailto:guillaume.gouchon@gmail.com">Contact me</a> if you have any issue or question.</string>
    <string name="about_other_sources">The game is using AndEngine by Nicolas Gramlich.</string>
    <string name="about_version">App version : 2.0.0</string>
    <string name="solo">Play Solo</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="help">How to Play</string>
    <string name="settings">Settings</string>
    <string name="tutorial">Tutorial</string>
    <string name="campaign">Campaign</string>
    <string name="battle_mode">Battle Mode</string>
    <string name="back">Back</string>
    <string name="resume_saved_battle">You have a saved game located in %s, do you want to finish it ?\nIt will be lost if you start another battle.</string>
    <string name="music_volume">Music</string>
    <string name="music_off">Off</string>
    <string name="music_on">On</string>
    <string name="about">About Warlords</string>
    <string name="rate_app">Rate the app</string>
    <string name="choose_army">Choose your side</string>
    <string name="choose_map">Pick a map</string>
    <string name="hire_troops">Hire your troops</string>
    <string name="requisition_points">Requisition Points :</string>
    <string name="your_army">Your Squad</string>
    <string name="available_troops">Available Troops</string>
    <string name="start_battle">Start Battle !</string>
    <string name="no_troops">Hire some troops before !</string>
    <string name="confirm_battle_message">You have some unused requisition points, continue to battlefield ?</string>
    <string name="no_slots_left">No more unit slot left&#8230;\nSell one of your unit !</string>
    <string name="not_enough_requisition">You do not have enough requisition points to hire this unit !</string>
    <string name="buy">Hire</string>
    <string name="sell">Sell</string>
    <string name="confirm_transaction">%1$s %2$s for %3$s requisition points ?</string>
    <string name="unit_image">Unit image</string>
    <string name="frags_number">Frags : %1$s</string>
    <string name="points">%1$s pts</string>
    <string name="ap">AP</string>
    <string name="at">AT</string>
    <string name="loading_game">Loading</string>
    <string name="loading_dots">. . .</string>
    <string name="game_paused">Pause</string>
    <string name="surrender">Surrender</string>
    <string name="confirm_surrender_message">Are you sure you want to surrender ?</string>
    <string name="resume_game">Resume Game</string>
    <string name="save_exit">Exit</string>
    <string name="deployment_phase">Deployment Phase</string>
    <string name="start">Deployment Done</string>
    <string name="go">Go !</string>
    <string name="victory">Victory !</string>
    <string name="defeat">Defeat...</string>
    <string name="battle1">- Amount of damages dealt to your enemies depends mainly on your units\' health, morale and experience.\n- Experience is earned during battles, the more the fight is undecided the more your units will earn experience.\n- Morale is lost each time your units get damages.\n- When your army has a morale inferior to 40 percents, it flees the battlefield. Winners get back some morale points after the battle.</string>
    <string name="battleTitle1">Morale and Experience during battles</string>
    <string name="battle2">- When you are attacking an enemy with units coming from different tiles, you get a damage bonus of 15 percents.</string>
    <string name="battleTitle2">Surround your enemies</string>
    <string name="battle3">- When protecting a fort or a castle, units only get half of the damages dealt to them.</string>
    <string name="battleTitle3">Strong places</string>
    <string name="battle4">- Bowmen shoot first during battles, as contact units are moving.\n- Bowmen units with a defense order get a 20 percents bonus on their damages.\n- When accompanied with some contact units, bowmen are protected and can unleash rain of arrows peacufully. If not, their damages are divided by 2 as they are engaged in a contact fight.</string>
    <string name="battleTitle4">Bowmen</string>
    <string name="humanHelp">- Average army with good skills in defense.</string>
    <string name="infantryHelp">- Basic human unit.\n- Unit capacity : 100\n- Attack power : Average</string>
    <string name="bowmenHelp">- Good defense unit, especially with a defense order or in a strong place.\n- To be accompanied with a contact unit to be even more effective.\n- Unit capacity : 60\n- Attack power : Average</string>
    <string name="knightsHelp">- Heavy infantry.\n- Unit capacity : 100\n- Attack power : Great</string>
    <string name="undeadHelp">- Undead have a life steal skill against living armies. When dealing damages, undead units resurrect 15 percents of the dealt damages.\n-  Moreover, each time a undead unit is dealing damages, the enemy unit loses 5 percents of morale.</string>
    <string name="skeletonHelp">- Weak infantry unit.\n- Unit capacity : 100\n- Attack power : Low</string>
    <string name="skeletonBowmenHelp">- Good defense unit, especially with a defense order or in a strong place.\n- To be accompanied with a contact unit to be even more effective.\n- Unit capacity : 60\n- Attack power : Average</string>
    <string name="necromancerHelp">- Powerful support unit.\n- A necromancer unit doubles the life steal of its whole army.\n- Unit capacity : 50\n- Attack power : Great</string>
    <string name="chaosHelp">- Chaos armies are outnumbered but are only composed of elite troops.\n- Chaos troops never lose morale and will fight until death.</string>
    <string name="chaosWarriorsHelp">- Strong infantry unit.\n- Unit capacity : 70\n- Attack power : Great</string>
    <string name="chaosWizardsHelp">- Good support unit.\nUsing their powerful demonic spells, the Chaos Wizards cancel enemies\' damages during the first round of every battle.\n- Unit capacity : 50\n- Attack power : Good</string>
    <string name="demonsHelp">- Powerful but expensive unit.\n- Demons have a regeneration ability which allows them to get back 15 percents of their health per turn.\n- Moreover, they have 15 percents of chance to deal a critical strike (damages x 1.5).\n- Unit capacity : 90\n- Attack power : Great</string>
    <string name="orcsArmyHelp">- The Orcs and Goblins are some agressive and ruthlessly troops.\n- They get a 20 percents damage bonus when attacking, but they get less bonus than other armies when defending.</string>
    <string name="goblinsHelp">- Weak scout unit.\n- Goblins do not need any supply when they are in the forests or in the mountains as they are feeding themselves.\n- Unit capacity : 70\n- Attack power : Low</string>
    <string name="orcsHelp">- Heavy Infantry.\n- Unit capacity : 90\n- Attack power : Good</string>
    <string name="trollsHelp">- Deadly monsters, very effective against the heavy infantry and the toughest troops.\n- Trolls have a regeneration capacity which allow them to get back 15 percents of their health per turn.\n- Unit capacity : 80\n- Attack power : Great</string>
    <string name="grass">Grass</string>
    <string name="forest">Forest</string>
    <string name="castle">Castle</string>
    <string name="fort">Fort</string>
    <string name="windmill">Windmill Farms</string>
    <string name="mountain">Mountain</string>
    <string name="hauntedRuins">Haunted Ruins</string>
    <string name="grassDescription">No effect</string>
    <string name="forestDescription">- When fogs of war are activated, forest tiles are invisible to units in diagonal.\n- Bowmen are less efficient in the forest due to the numerous shelters.</string>
    <string name="castleDescription">- The most important place of your kingdom; lose it and your game is over.\n- Hiring units is possible on this tile.\n- Gives bonuses to units in defense and heal them.\n- Makes you earn 100 gold coins per turn (70 during winter).</string>
    <string name="fortDescription">- Hiring units is possible on this tile.\n- Gives bonuses to units in defense and heal them.\n- Makes you earn 50 gold coins per turn (35 during winter).</string>
    <string name="windmillDescription">- Gives morale recuperation bonuses.\n- Makes you earn 100 gold coins per turn (70 during winter).</string>
    <string name="mountainDescription">- Heavy infantries cannot climb mountains.\n- Mountains allow you to see further in the fogs of war.</string>
    <string name="hauntedRuinsDescription">- Each turn a unit is standing on some haunted ruins, it loses morale but gains experience.\n- When leaving the ruins, a unit has one chance out of two to be lost and finally not move.</string>
    <string name="aboutTitle">About Warlords Online</string>
    <string name="appInfo">Game Information</string>
    <string name="rateLink">Rate the app</string>
    <string name="ok">OK</string>
    <string name="playerOptions">Player Options</string>
    <string name="gameOptions">Game Options</string>
    <string name="background">Background</string>
    <string name="splash_label">Giggs Apps</string>
    <string name="dontWant">No, thanks</string>
    <string name="later">Remind me later</string>
    <string name="rateNow">Rate Warlord Online</string>
    <string name="rateItQuestion">If you enjoy playing Warlords Online,\nplease take a moment to rate it.\nThanks for your support !</string>
    <string name="thanks">Special thanks to Ash Cairo, Jeremie Barbier and JB for beta-testing. Backgrounds by JAP and Justin Nichols. Icons and other assets by YAR, Ravenmore, wulax and Nicubunu.</string>
    <string name="loading">Loading...</string>
    <string name="newGame">New Game</string>
    <string name="about1">Game and Music by Guillaume Gouchon</string>
    <string name="about2">Current Version :</string>
    <string name="exitQuestion">Are you sure you want to flee the battlefield ?</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="removeAds">Remove Ads</string>
    <string name="dismiss">Dismiss</string>
    <string name="enableSound">Enable Music</string>
    <string name="enableNotif">Enable Notifications</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="button">button</string>
    <string name="name">Change your name</string>
    <string name="askName">What is your name, General ?</string>
    <string name="nationality">Nationality</string>
    <string name="veterans">Veterans (nb of Battles)</string>
    <string name="bestPlayers">Best Generals (nb of Victories)</string>
</resources>