<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/stormBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/bg_home"
        android:tint="#c5000000" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/bg_home_thunder" />

    <com.giggs.apps.chaos.views.CustomTextView
        style="@style/SettingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="3dp"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/app_name" />

    <LinearLayout
        android:id="@+id/mainButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <com.giggs.apps.chaos.views.CustomButton
            android:id="@+id/soloButton"
            style="@style/HomeScreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/solo" />

        <com.giggs.apps.chaos.views.CustomButton
            android:id="@+id/multiplayerButton"
            style="@style/HomeScreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/multiplayer" />

        <com.giggs.apps.chaos.views.CustomButton
            android:id="@+id/helpButton"
            style="@style/HomeScreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/help" />

        <com.giggs.apps.chaos.views.CustomButton
            android:id="@+id/settingsButton"
            style="@style/HomeScreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:focusable="false"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <com.giggs.apps.chaos.views.CustomButton
            android:id="@+id/aboutButton"
            style="@style/SettingsSmallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/about" />

        <com.giggs.apps.chaos.views.CustomButton
            android:id="@+id/rateButton"
            style="@style/SettingsSmallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/rate_app" />

        <com.giggs.apps.chaos.views.CustomTextView
            style="@style/SettingsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/music_volume" />

        <RadioGroup
            android:id="@+id/musicVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <com.giggs.apps.chaos.views.CustomRadioButton
                android:id="@+id/musicOff"
                style="@style/DifficultyRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/music_off" />

            <com.giggs.apps.chaos.views.CustomRadioButton
                android:id="@+id/musicOn"
                style="@style/DifficultyRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/music_on" />
        </RadioGroup>
    </LinearLayout>

    <com.giggs.apps.chaos.views.CustomButton
        android:id="@+id/backButton"
        style="@style/HomeScreenButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:text="@string/back"
        android:textSize="20sp"
        android:visibility="gone" />

</RelativeLayout>