<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_battle"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_title"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.glevel.wwii.views.CustomTextView
            android:id="@+id/title"
            style="@style/ArmyBuilderTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:gravity="left|center_vertical"
            android:text="@string/hire_troops" />

        <com.glevel.wwii.views.CustomButton
            android:id="@+id/startBattle"
            style="@style/ArmyBuilderSmallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/start_battle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp" >

        <LinearLayout
            style="@style/ArmyBuilderColumn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal" >

                <com.glevel.wwii.views.CustomTextView
                    style="@style/ArmyBuilderSubTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="@string/your_army" />

                <com.glevel.wwii.views.CustomTextView
                    style="@style/ArmyBuilderSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/requisition_points"
                    android:textSize="14sp" />

                <com.glevel.wwii.views.CustomTextView
                    android:id="@+id/requisitionPoints"
                    style="@style/ArmyBuilderTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/requisitionPoints"
                    android:textSize="24sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/myArmyList"
                style="@style/ArmyBuilderTroopsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            style="@style/ArmyBuilderColumn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <com.glevel.wwii.views.CustomTextView
                style="@style/ArmyBuilderSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/available_troops" />

            <ListView
                android:id="@+id/availableTroopsList"
                style="@style/ArmyBuilderTroopsList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>