<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_game_gui"
    android:padding="5dp" >

    <com.glevel.wwii.views.CustomTextView
        android:id="@+id/unitName"
        style="@style/UnitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/placeholder" />

    <com.glevel.wwii.views.CustomTextView
        android:id="@+id/unitExperience"
        style="@style/UnitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/placeholder"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="right|center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/unitMainWeapon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal" >

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/unitMainWeaponName"
                style="@style/UnitText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/placeholder" />

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/unitMainWeaponAP"
                style="@style/UnitEfficiency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/ap" />

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/unitMainWeaponAT"
                style="@style/UnitEfficiency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/at" />

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/unitMainWeaponAmmo"
                style="@style/WeaponAmmo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/unitSecondaryWeapon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/unitSecondaryWeaponName"
                style="@style/UnitText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/placeholder" />

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/unitSecondaryWeaponAP"
                style="@style/UnitEfficiency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/ap" />

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/unitSecondaryWeaponAT"
                style="@style/UnitEfficiency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/at" />

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/unitSecondaryWeaponAmmo"
                style="@style/WeaponAmmo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <com.glevel.wwii.views.CustomTextView
        android:id="@+id/unitFrags"
        style="@style/UnitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/placeholder"
        android:textSize="12sp" />

    <com.glevel.wwii.views.CustomTextView
        android:id="@+id/unitAction"
        style="@style/UnitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/placeholder"
        android:textSize="16sp" />

</RelativeLayout>